# Atmospheric-Starter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  shell.html  vcpkg.json
.github/workflows/: ci-android.yml  ci-desktop.yml  ci-ios.yml  ci-native.yml  ci-web.yml
src/: main.cpp
